--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       <textarea id="css-editor" placeholder="Write CSS here..."></textarea>
       <textarea id="js-editor" placeholder="Write JavaScript here..."></textarea>
     </div>
-    <button id="run-btn">Run Code</button>
+    <div>
+      <button id="run-btn">Run Code</button>
+      <button id="fullscreen-btn">Fullscreen</button>
+    </div>
     <iframe id="output" title="Output Window"></iframe>
   </main>
 
