--- a/index.html
+++ b/index.html
@@ -1,33 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Live Code Editor</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Code Editor with Tabs</title>
+    <!-- Link CodeMirror CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+        }
+        .tabs {
+            display: flex;
+            background: #333;
+            color: white;
+        }
+        .tab {
+            padding: 10px 20px;
+            cursor: pointer;
+            background: #444;
+            border-right: 1px solid #555;
+        }
+        .tab.active {
+            background: #222;
+            font-weight: bold;
+        }
+        .editor-container {
+            flex: 1;
+            position: relative;
+        }
+        .CodeMirror {
+            height: 100%;
+        }
+        iframe {
+            width: 100%;
+            height: 50%;
+            border: 1px solid #ddd;
+            box-sizing: border-box;
+        }
+        button {
+            padding: 10px 20px;
+            margin: 10px;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>Live Code Editor</h1>
-  </header>
 
-  <main>
-    <div id="editor-container">
-      <textarea id="html-editor" placeholder="Write HTML here..."></textarea>
-      <textarea id="css-editor" placeholder="Write CSS here..."></textarea>
-      <textarea id="js-editor" placeholder="Write JavaScript here..."></textarea>
+    <!-- Tabs -->
+    <div class="tabs">
+        <div class="tab active" data-editor="htmlEditor">HTML</div>
+        <div class="tab" data-editor="cssEditor">CSS</div>
+        <div class="tab" data-editor="jsEditor">JavaScript</div>
     </div>
+
+    <!-- Editor Container -->
+    <div class="editor-container">
+        <textarea id="htmlEditor" placeholder="HTML Code"></textarea>
+        <textarea id="cssEditor" placeholder="CSS Code" style="display: none;"></textarea>
+        <textarea id="jsEditor" placeholder="JavaScript Code" style="display: none;"></textarea>
+    </div>
+
+    <!-- Buttons -->
     <div>
-      <button id="run-btn">Run Code</button>
-      <button id="fullscreen-btn">Fullscreen</button>
+        <button onclick="runCode()">Run Code</button>
     </div>
-    <iframe id="output" title="Output Window"></iframe>
-  </main>
 
-  <footer>
-    <p>Built with HTML, CSS, and JavaScript</p>
-  </footer>
+    <!-- Output -->
+    <iframe id="sandbox"></iframe>
 
-  <script src="script.js"></script>
+    <!-- Link CodeMirror JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/javascript/javascript.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/css/css.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/xml/xml.min.js"></script>
+    <script>
+        // Initialize CodeMirror instances
+        const htmlEditor = CodeMirror.fromTextArea(document.getElementById('htmlEditor'), {
+            mode: 'xml',
+            theme: 'default',
+            lineNumbers: true,
+            tabSize: 2,
+        });
+
+        const cssEditor = CodeMirror.fromTextArea(document.getElementById('cssEditor'), {
+            mode: 'css',
+            theme: 'default',
+            lineNumbers: true,
+            tabSize: 2,
+        });
+
+        const jsEditor = CodeMirror.fromTextArea(document.getElementById('jsEditor'), {
+            mode: 'javascript',
+            theme: 'default',
+            lineNumbers: true,
+            tabSize: 2,
+        });
+
+        const editors = { htmlEditor, cssEditor, jsEditor };
+
+        // Handle tab switching
+        document.querySelectorAll('.tab').forEach(tab => {
+            tab.addEventListener('click', () => {
+                document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
+                tab.classList.add('active');
+                const editorId = tab.getAttribute('data-editor');
+                Object.keys(editors).forEach(key => {
+                    editors[key].getWrapperElement().style.display = key === editorId ? 'block' : 'none';
+                });
+            });
+        });
+
+        // Run Code
+        function runCode() {
+            const htmlCode = htmlEditor.getValue();
+            const cssCode = cssEditor.getValue();
+            const jsCode = jsEditor.getValue();
+
+            const iframe = document.getElementById('sandbox');
+            const doc = iframe.contentDocument || iframe.contentWindow.document;
+
+            doc.open();
+            doc.write(`
+                <html>
+                    <head>
+                        <style>${cssCode}</style>
+                    </head>
+                    <body>
+                        ${htmlCode}
+                        <script>${jsCode}<\/script>
+                    </body>
+                </html>
+            `);
+            doc.close();
+        }
+    </script>
 </body>
 </html>
