--- a/index.html
+++ b/index.html
@@ -3,150 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Editor with Tabs</title>
-    <!-- Link CodeMirror CSS -->
+    <title>Advanced Code Editor</title>
+    <!-- CodeMirror CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-        }
-        .tabs {
-            display: flex;
-            background: #333;
-            color: white;
-        }
-        .tab {
-            padding: 10px 20px;
-            cursor: pointer;
-            background: #444;
-            border-right: 1px solid #555;
-        }
-        .tab.active {
-            background: #222;
-            font-weight: bold;
-        }
-        .editor-container {
-            flex: 1;
-            position: relative;
-        }
-        .CodeMirror {
-            height: 100%;
-        }
-        iframe {
-            width: 100%;
-            height: 50%;
-            border: 1px solid #ddd;
-            box-sizing: border-box;
-        }
-        button {
-            padding: 10px 20px;
-            margin: 10px;
-            font-size: 16px;
-            cursor: pointer;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/theme/dracula.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/theme/eclipse.min.css">
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+      <h1>Advanced Code Editor</h1>
+      <div class="controls">
+          <button onclick="runCode()">Run</button>
+          <button onclick="saveCode()">Save</button>
+          <button onclick="loadCode()">Load</button>
+          <button onclick="exportCode()">Export</button>
+          <select id="themeSelector" onchange="changeTheme()">
+              <option value="default">Default</option>
+              <option value="dracula">Dark</option>
+              <option value="eclipse">Light</option>
+          </select>
+          <button id="fullscreenButton" onclick="togglePreviewFullscreen()">Fullscreen Preview</button>
+      </div>
+  </header>
 
-    <!-- Tabs -->
-    <div class="tabs">
-        <div class="tab active" data-editor="htmlEditor">HTML</div>
-        <div class="tab" data-editor="cssEditor">CSS</div>
-        <div class="tab" data-editor="jsEditor">JavaScript</div>
-    </div>
+  <main>
+      <div class="tabs">
+          <div class="tab active" data-editor="htmlEditor">HTML</div>
+          <div class="tab" data-editor="cssEditor">CSS</div>
+          <div class="tab" data-editor="jsEditor">JavaScript</div>
+      </div>
+      <div class="editor-container">
+          <textarea id="htmlEditor"></textarea>
+          <textarea id="cssEditor" style="display: none;"></textarea>
+          <textarea id="jsEditor" style="display: none;"></textarea>
+      </div>
+      <!-- Preview will be opened in a new tab -->
+      <iframe id="sandbox" style="display:none;"></iframe>
+  </main>
 
-    <!-- Editor Container -->
-    <div class="editor-container">
-        <textarea id="htmlEditor" placeholder="HTML Code"></textarea>
-        <textarea id="cssEditor" placeholder="CSS Code" style="display: none;"></textarea>
-        <textarea id="jsEditor" placeholder="JavaScript Code" style="display: none;"></textarea>
-    </div>
-
-    <!-- Buttons -->
-    <div>
-        <button onclick="runCode()">Run Code</button>
-    </div>
-
-    <!-- Output -->
-    <iframe id="sandbox"></iframe>
-
-    <!-- Link CodeMirror JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/javascript/javascript.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/css/css.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/xml/xml.min.js"></script>
-    <script>
-        // Initialize CodeMirror instances
-        const htmlEditor = CodeMirror.fromTextArea(document.getElementById('htmlEditor'), {
-            mode: 'xml',
-            theme: 'default',
-            lineNumbers: true,
-            tabSize: 2,
-        });
-
-        const cssEditor = CodeMirror.fromTextArea(document.getElementById('cssEditor'), {
-            mode: 'css',
-            theme: 'default',
-            lineNumbers: true,
-            tabSize: 2,
-        });
-
-        const jsEditor = CodeMirror.fromTextArea(document.getElementById('jsEditor'), {
-            mode: 'javascript',
-            theme: 'default',
-            lineNumbers: true,
-            tabSize: 2,
-        });
-
-        const editors = { htmlEditor, cssEditor, jsEditor };
-
-        // Handle tab switching
-        document.querySelectorAll('.tab').forEach(tab => {
-            tab.addEventListener('click', () => {
-                document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
-                tab.classList.add('active');
-                const editorId = tab.getAttribute('data-editor');
-                Object.keys(editors).forEach(key => {
-                    editors[key].getWrapperElement().style.display = key === editorId ? 'block' : 'none';
-                });
-            });
-        });
-
-        // Run Code
-        function runCode() {
-            const htmlCode = htmlEditor.getValue();
-            const cssCode = cssEditor.getValue();
-            const jsCode = jsEditor.getValue();
-
-            const iframe = document.getElementById('sandbox');
-            const doc = iframe.contentDocument || iframe.contentWindow.document;
-
-            doc.open();
-            doc.write(`
-                <html>
-                    <head>
-                        <style>${cssCode}</style>
-                    </head>
-                    <body>
-                        ${htmlCode}
-                        <script>${jsCode}<\/script>
-                    </body>
-                </html>
-            `);
-            doc.close();
-        }
-    </script>
+  <!-- CodeMirror JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/javascript/javascript.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/css/css.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/xml/xml.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/lint/lint.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/edit/closebrackets.min.js"></script>
+  <!-- Custom Scripts -->
+  <script src="script.js" defer></script>
 </body>
 </html>
